--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@ Marilyn Mosley Gordanier, the founder of Laurel Springs, enjoyed speaking with m
 During the week-long Easter Bowl tournament, Ms. Mosley Gordanier spent time with our young athletes discussing the elements of what makes a great tennis player.   
         </p>
     </div>
+    <div class="page-header" id="campus_life">
+    <h2 class="text-capitalize"> campus life </h2>
+    <div class="row">
+       <div class="travel_mainDiv"> 
+       <iframe width="876" height="489" src="https://www.youtube.com/embed/cM1c4KwY8RQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+        </div> 
+        </div> 
+    </div>
     <div> 
     <marquee id="marqueeStyle" onmouseover="this.stop();" onmouseout="this.start();">
     *** Feel free to ask queries on school@gmail.com ***    
